fix: fix z-index

--- a/src/components/home/hero/Hero.module.css
+++ b/src/components/home/hero/Hero.module.css
@@ -12,7 +12,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 999;
+  z-index: 1;
   width: 40px;
   height: 40px;
   display: flex;
@@ -27,7 +27,7 @@
 }
 
 .arrow:hover {
-  transform: translateY(-50%) scale(1.1);
+  background: rgba(211, 211, 211, 0.3);
 }
 
 .prevArrow {
@@ -43,6 +43,14 @@
   height: 24px;
   object-fit: contain;
   pointer-events: none;
+}
+
+.prevArrow img {
+  margin-right: 4px;
+}
+
+.nextArrow img {
+  margin-left: 4px;
 }
 
 /* Remove default slick arrows */
